--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,30 @@
-ledgersmb (1.3.9-2) UNRELEASED; urgency=low
+ledgersmb (1.3.9-2~b) UNRELEASED; urgency=low
 
-  * Bump package version to 1.3.9-2.
+  * Change debhelper compatibility to 8.
+  * Changes to debian/control:
+    - Change debhelper Build-Depends to >= 8.
+    - Change web server dependency to 'apache2 | httpd-cgi'.
+    - Make the postgresql related Depends/Suggests unversioned.
+  * Changes to debian/postrm:
+    - Rewrite how the old dpkg-statoverride usage is being dealt with.
+  * Changes to debian/postinst:
+    - Do not use dpkg-statoverride to set default permissions.
+  * Changes to debian/rules:
+    - Changed to using dh and a mimimal debian/rules.
+    - Do not install MIT-LICENSE file from the embedded Scriptaculous library.
+    - Do permissions corrections here instead of in the maintenance scripts
+      and do them in the override_dh_fixperms target.
+  * Changes to debian/copyright:
+    - Update the end year for my debian directory copyright information.
+    - Add information regarding the embedded Scriptaculous Javascript library.
+  * Changes to debian/ledgersmb.lintian-override:
+    - Override manpage-has-bad-whatis-entry Lintian Warnings.
+    - Remove override related to the Scriptaculous license file.
+  * Use debian/ledgersmb.manpages to list the man pages to be installed.
+  * Prefix binary-package specific file names in the debian directory with
+    the package name.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 24 Dec 2011 15:08:14 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sun,  8 Jan 2012 20:43:34 -0500
 
 ledgersmb (1.3.9-1) experimental; urgency=low
 
