--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,10 +1,10 @@
-ledgersmb (1.3.10~rc2-2) UNRELEASED; urgency=low
+ledgersmb (1.3.10-1) experimental; urgency=low
 
-  * New upstream release, rc2 for 1.3.10.
+  * New upstream release.
   * Install pos.conf.pl.template as an example file.
   * Correct softlink for the ledgersmb-httpd.conf file.
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 15 Jan 2012 17:44:50 -0500
+ -- Robert James Clay <jame@rocasa.us>  Tue, 17 Jan 2012 19:38:09 -0500
 
 ledgersmb (1.3.9-2) experimental; urgency=low
 
