--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.10-2) UNRELEASED; urgency=low
+
+  * Start working on v1.3.10-2.
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 21 Jan 2012 12:56:21 -0500
+
 ledgersmb (1.3.10-1) experimental; urgency=low
 
   * New upstream release.
