--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ledgersmb (1.3.11-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.11-1) experimental; urgency=low
 
   * New upstream release.
   * Changes for debian/patches/*:
     - Remove unneeded changes from the 15_httpdconf.patch file.
-    - The nine patches for the scripts/* files are no longer needed. 
+    - The nine patches for the scripts/* files are no longer needed. Removed.
   * Changes for debian/clean:
     - Add the debian/clean file for use by dh_clean during package builds.
     - Remove the created pos.conf.pl file during the package build cleanup.
@@ -23,7 +23,7 @@ ledgersmb (1.3.11-1~1) UNRELEASED; urgency=low
     - Change how Build.PL is removed in the override_dh_auto_configure target.
     - Create default pos.conf.pl file in the override_dh_auto_configure target.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 25 Feb 2012 15:43:11 -0500
+ -- Robert James Clay <jame@rocasa.us>  Fri, 01 Mar 2012 14:26:52 -0500
 
 ledgersmb (1.3.10-1) experimental; urgency=low
 
