--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.12-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 06 Mar 2012 09:04:53 -0500
+
 ledgersmb (1.3.11-1) experimental; urgency=low
 
   * New upstream release.
