--- a/debian/TODO
+++ b/debian/TODO
@@ -1,5 +1,10 @@
 debian/TODO for LedgerSMB v1.3
 
+
+- Thought this had been fixed but it is still coming up:
+W: ledgersmb source: syntax-error-in-dep5-copyright line 65: Continuation line
+ outside a paragraph.
+
 - Auto-configuration of PostgreSQL and access to it by LedgerSMB using dbconfig-common.
 Password for postgres superuser? For LedgerSMB admin?  Run prepare-company-database.sh
 script looks to be usable but the current version looks like it needs a patch even
@@ -9,11 +14,23 @@ in the template file to that found by the script.  Such a variable shouldn't be
 found there because the package install creates the correct template file.  Patch it
 to at least comment those lines out?
 
-- The long description in debian/control needs to be rewritten.  (Note also that
-upstream has rewritten the project description, essentially for the first time
-since the writeup at the time of the fork from sql-ledger.)
+- The LedgerSMB-manual.pdf is currently being installed as LedgerSMB-manual.pdf.gz
+to /usr/share/doc/ledgersmb/ but the manual directory from which that is apparantly
+created (doc/manual) is also being installed.  Is that manual dir even needed? Esp
+if possible target files are created?  Including html?
+- Note also that the pdf file appears to be in the distribution;  upstream confirmed
+that pdflatex is used to generate the pdf file.
 
-- Rewrite the debian/copyright file, following DEP-5.
+
+- If the tools/prepare-company-database.sh script is to be usable on the Debian
+installation, it will need to be patched. For instance:  Lines 199 and 200 (as
+of 1.3.12) are used in the script to create ledgersmb-httpd.conf from the
+ledgersmb-httpd.conf.template apparantly each time it runs. Current Debian
+install does not have either the template file or the working file in the place
+it expects and in any case the debian package install takes care of those.
+
+- The templates directory had been getting installed to /etc/ledgersmb/templates.
+Should that be /var/lib/ledgersmb/templates instead?
 
 - Use a patch to create an updated example of the ledgersmb.conf.default file
 instead of the sed line in debian/rules? Then create a copy of it as ledgersmb.conf
@@ -35,4 +52,4 @@ to be operational with it.
 
 
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 17 Jan 2012 17:41:20 -0500
+ -- Robert James Clay <jame@rocasa.us>  Tue, 14 Mar 2012 12:30:22 -0500
