--- a/debian/changelog
+++ b/debian/changelog
@@ -22,7 +22,7 @@ ledgersmb (1.3.12-1) experimental; urgency=low
     - Rewrote the short and long package descriptions.
     - Updated the Standards-Version to 3.9.3, no changes required.
 
- -- Robert James Clay <jame@rjcpc.rocasa.us>  Wed, 14 Mar 2012 13:17:52 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 14 Mar 2012 13:30:17 -0400
 
 ledgersmb (1.3.11-1) experimental; urgency=low
 
