--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.13-1) UNRELEASED; urgency=low
+
+  * Start packaging for new upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Wed, 14 Mar 2012 14:27:21 -0400
+
 ledgersmb (1.3.12-1) experimental; urgency=low
 
   * New upstream release.
