--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,10 +1,16 @@
-ledgersmb (1.3.13-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.13-1~2) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Correct a formatting issue in the debian/copyright file.
+  * Do not install doc/manual/*tex source files with package.
   * Changes for debian/patches/*:
+    - Add patching of ledgersmb.conf.default to 05_confdir.patch.
     - Update 10_Makefile-PL.patch against the new version of Makefile.PL.
+  * Changes to debian/rules:
+    - Remove the sed code for patching the ledgersmb.conf.default file from
+      the override_dh_auto_configure target.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 14 Mar 2012 16:21:43 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 17 Mar 2012 09:24:11 -0400
 
 ledgersmb (1.3.12-1) experimental; urgency=low
 
