--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-ledgersmb (1.3.14~rc2-1) UNRELEASED; urgency=low
+ledgersmb (1.3.14~rc2-1~1) UNRELEASED; urgency=low
 
-  * New upstream release candidate.
+  * New upstream release candidate, test build 1.3.14~rc2-1~1.
+  * Except for 53_LedgerSMB-IC-pod.patch; remove all of the current
+    documentation(POD) patches as they are no longer neccessary.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 26 Mar 2012 10:51:24 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 26 Mar 2012 13:24:51 -0400
 
 ledgersmb (1.3.13-1) experimental; urgency=low
 
