--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,10 +1,14 @@
-ledgersmb (1.3.14~rc2-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.14-1) experimental; urgency=low
 
-  * New upstream release candidate, test build 1.3.14~rc2-1~1.
-  * Except for 53_LedgerSMB-IC-pod.patch; remove all of the current
-    documentation(POD) patches as they are no longer neccessary.
+  * New upstream release.
+  * Correct the current active Uploaders list in LedgerSMB debian/control.
+  * Besides as examples; also install utils/ directory to /usr/share/ledgersmb.
+  * Changes for debian/patches/*:
+    - Correct working directory paths in 15_httpdconf.patch.
+    - Remove the current documentation (POD) patches as they are no longer
+      necessary.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 26 Mar 2012 13:24:51 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 03 Apr 2012 17:40:30 -0400
 
 ledgersmb (1.3.13-1) experimental; urgency=low
 
