--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.14-2) UNRELEASED; urgency=low
+
+  * Start v1.3.14-2 development 
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 03 Apr 2012 21:57:55 -0400
+
 ledgersmb (1.3.14-1) experimental; urgency=low
 
   * New upstream release.
